# tuxedocat

./: .gitignore  CMakeLists.txt  COPYING  README.md  Tupfile  Tuprules.tup  TuxedoCat.sln  tuxedocat.sln  tuxedocat.vcxproj
.tup/: db
LookupTableGenerator/: Generator.cs  LookupTableGenerator.csproj
TuxedoCat/: AppMain.cs  CastlingInfo.cs  Controller.cs  Engine.cpp  Engine.cs  FENParser.cs  Interface.cpp  Main.cpp  Makefile  Move.cpp  Move.cs  MoveGenerationType.cs  MoveGenerator.cpp  MoveGenerator.cs  MoveList.cs  Piece.cs  PieceColor.cpp  PieceColor.cs  PieceRank.cpp  PieceRank.cs  Position.cpp  Position.cs  SANParser.cs  Test.cpp  TuxedoCat  TuxedoCat.csproj  TuxedoCat.h  TuxedoCatCPP.vcxproj  TuxedoCatUtility.cs  Utility.cpp  log.txt
TuxedoCat/Properties/: AssemblyInfo.cs
TuxedoCatCPP/: Controller.cpp  Engine.cpp  Interface.cpp  Main.cpp  MoveGenerator.cpp  Position.cpp  TuxedoCat.h  TuxedoCatCPP.vcxproj  TuxedoCatCPP.vcxproj.filters  Utility.cpp
TuxedoCatTest/: EngineTests.cs  FENParserTests.cs  MoveGeneratorTests.cs  PositionTests.cs  TuxedoCatTest.csproj  TuxedoCatUtilityTests.cs
TuxedoCatTest/Properties/: AssemblyInfo.cs
googletest/msvc/: gtest.vcxproj
googletest/src/: Tupfile
include/: Bitboard.hpp  BitboardConversionException.hpp  CastlingStatus.hpp  Color.hpp  Controller.hpp  Direction.hpp  DivideMessage.hpp  Engine.hpp  Interface.hpp  InvalidSquareException.hpp  LookupData.hpp  Message.hpp  MessageArgument.hpp  MessageQueue.hpp  MessageType.hpp  Messages.hpp  Move.hpp  MoveGenerator.cpp  MoveList.hpp  MoveSearchCriteria.hpp  PerftMessage.hpp  Piece.hpp  Position.hpp  PrintMessage.hpp  QuitMessage.hpp  Rank.hpp  SANEngine.hpp  SetBoardMessage.hpp  Square.hpp  TestMessage.hpp  UndoMoveMessage.hpp  UserMoveMessage.hpp  Utility.hpp
src/: Bitboard.cpp  CastlingStatus.cpp  Color.cpp  Controller.cpp  DivideMessage.cpp  Engine.cpp  Interface.cpp  LookupData.cpp  Main.cpp  Message.cpp  MessageArgument.cpp  MessageQueue.cpp  Move.cpp  MoveList.cpp  PerftMessage.cpp  Piece.cpp  Position.cpp  PrintMessage.cpp  QuitMessage.cpp  Rank.cpp  SANEngine.cpp  SetBoardMessage.cpp  Square.cpp  TestMessage.cpp  UndoMoveMessage.cpp  UserMoveMessage.cpp  Utility.cpp
src/TuxedoCat/: BasicUserInterface.cs  CECPQuitCommand.cs  Command.cs  CommandFactory.cs  Engine.cs  ICECPQuitCommandHandler.cs  ICommandFactory.cs  IObserver.cs  ISubject.cs  IUserInterface.cs  Program.cs  Subject.cs  TuxedoCat.csproj
test_include/: BitboardTest.hpp  EngineTest.hpp  MoveTest.hpp  PieceTest.hpp  PositionTest.hpp  SANEngineTest.hpp  SquareTest.hpp  TuxedoCatTest.hpp
test_src/: BitboardTest.cpp  EngineTest.cpp  Main.cpp  MoveTest.cpp  PieceTest.cpp  PositionTest.cpp  SANEngineTest.cpp  SquareTest.cpp  UtilityTest.cpp
utilities/betweenLookupGen/: betweenLookupGen.cpp  betweenLookupGen.hpp  main.cpp
